--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,12 +37,7 @@
 <!-- body -->
 
 <body class="main-layout ">
-    <!-- loader  -->
-    <!-- <div class="loader_bg">
-        <div class="loader"><img src="images/loading.gif" alt="#" /></div>
-    </div> -->
-    <!-- end loader -->
-    <!-- header -->
+    
     <header>
         <!-- header inner -->
         <div class="header">
@@ -53,7 +48,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><h2>DONATIONS APP<h2></a>
+                                    <a href="/index"><h2>DONATIONS APP<h2></a>
                                 </div>
                             </div>
                         </div>
@@ -63,9 +58,8 @@
                             <div class="limit-box">
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
-                                        <li class="active"> <a href="pages/index.ejs">Home</a> </li>
-                                        <li> <a href="">Cart</a> </li>
-                                        <li><a href="brand.html">Link 2</a></li>
+                                        <li class="active"> <a href="/index">Home</a> </li>
+                                        <li> <a href="/cart">Cart</a> </li>
                                         <li><a href="special.html">Link 3</a></li>
                                         <li><a href="contact.html">Link 4</a></li>
                                         <li class="last">
@@ -83,71 +77,7 @@
         </div>
         <!-- end header inner -->
     </header>
-    <!-- end header -->
-    <!-- <section class="slider_section">
-        <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="first-slide" src="images/banner.jpg" alt="First slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="second-slide" src="images/banner.jpg" alt="Second slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Third slide">
-                    <div class="container">
-                        <div class="carousel-caption relative">
-                            <span>All New Phones </span>
-                            <h1>up to 25% Flat Sale</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content
-                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
-                            <a class="buynow" href="#">Buy Now</a>
-                            <ul class="social_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <i class='fa fa-angle-left'></i>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <i class='fa fa-angle-right'></i>
-            </a>
-        </div>
-    </section> -->
-
+    
     <!-- about -->
     <div class="about">
         <div class="container">
@@ -201,10 +131,6 @@
                                 <input type="submit" value="Add to cart" class="btn btn-primary">
                             </form>
                         </div>
-
-                        
-
-
                     </div>
                     <% }) %>
                     <div class="col-md-12">
@@ -215,91 +141,6 @@
         </div>
     </div>
 
-    <!-- end brand -->
-    <!-- clients -->
-    <!-- <div class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2>what say our clients</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="clients_red">
-        <div class="container">
-            <div id="testimonial_slider" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ul class="carousel-indicators">
-                    <li data-target="#testimonial_slider" data-slide-to="0" class=""></li>
-                    <li data-target="#testimonial_slider" data-slide-to="1" class="active"></li>
-                    <li data-target="#testimonial_slider" data-slide-to="2" class=""></li>
-                </ul>
-                <!-- The slideshow -->
-                <!-- <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <div class="testomonial_section">
-                            <div class="full center">
-                            </div>
-                            <div class="full testimonial_cont text_align_center cross_layout">
-                                <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
-                                    </p>
-                                    <div class="full text_align_center margin_top_30">
-                                        <img src="icon/testimonial_qoute.png">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item active">
-
-                        <div class="testomonial_section">
-                            <div class="full center">
-                            </div>
-                            <div class="full testimonial_cont text_align_center cross_layout">
-                                <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
-                                    </p>
-                                    <div class="full text_align_center margin_top_30">
-                                        <img src="icon/testimonial_qoute.png">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="carousel-item">
-
-                        <div class="testomonial_section">
-                            <div class="full center">
-                            </div>
-                            <div class="full testimonial_cont text_align_center cross_layout">
-                                <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
-                                    </p>
-                                    <div class="full text_align_center margin_top_30">
-                                        <img src="icon/testimonial_qoute.png">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div> -->
-
-            </div>
-
-        </div>
-    </div> 
-    <!-- end clients -->
     <!-- contact -->
     <div class="contact">
         <div class="container">
@@ -346,12 +187,7 @@
                                 <p>1111111111
                                     <br>team11@gmail.com</p>
                             </div>
-                            <!-- <ul class="location_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-
-                            </ul> -->
+                            
                             <div class="menu-bottom">
                                 <ul class="link">
                                     <li> <a href="#">Home</a></li>
@@ -363,11 +199,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="copyright">
-                <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://templates.beatsnoop.com/"> Free Html Templates</a></p>
                 </div>
             </div>
         </div>
