removed extra pages, included sequelize

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -60,7 +60,7 @@
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="/index">Home</a> </li>
                                         <li> <a href="/cart">Cart</a> </li>
-                                        <li><a href="special.html">Link 3</a></li>
+                                        <li><a href="/createListing">Create Listing</a></li>
                                         <li><a href="contact.html">Link 4</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
