--- a/views/pages/createListing.ejs
+++ b/views/pages/createListing.ejs
@@ -33,32 +33,6 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-
-      <style>
-        .login-form {
-            width: 340px;
-            margin: 50px auto;
-              font-size: 15px;
-        }
-        .login-form form {
-            margin-bottom: 15px;
-            background: #f7f7f7;
-            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            padding: 30px;
-        }
-        .login-form h2 {
-            margin: 0 0 15px;
-        }
-        .form-control, .btn {
-            min-height: 38px;
-            border-radius: 2px;
-        }
-        .btn {        
-            font-size: 15px;
-            font-weight: bold;
-        }
-        </style>
-
 </head>
 <!-- body -->
 
@@ -104,26 +78,36 @@
         <!-- end header inner -->
     </header>
     
-    <!-- Login form -->
-    <div class="login-form">
-        <form action="/" method="post">
-            <h2 class="text-center">Log in</h2>       
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Username" required="required" name="username">
+
+    <!-- contact -->
+    <div class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="titlepage">
+                        <h2>Create Listing</h2>
+                    </div>
+                    <form class="main_form" action="/createListing" method="post">
+                        <div class="row">
+                            <div class=" col-md-12">
+                                <input class="form-control" placeholder="Product Name" type="text" name="product_name">
+                            </div>
+                            <div class=" col-md-12">
+                                <input class="form-control" placeholder="Product Category" type="text" name="product_category">
+                            </div>
+                            <div class=" col-md-12">
+                                <input class="form-control" placeholder="Product image" type="text" name="product_image">
+                            </div>
+                            <div class=" col-md-12">
+                                <button class="send">Create Listing</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required="required" name="password">
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block" value="LOGIN">Log in</button>
-            </div>      
-        </form>
-        <p class="text-center"><a href="/signUp">Create an Account</a></p>
+        </div>
     </div>
-
-
-
-
+    <!-- end contact -->
 
     <!-- footer -->
     <footer>
