--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -45,7 +45,6 @@
 </head>
 
 <body>
-
     <!-- header start -->
     <header>
         <!-- header inner -->
@@ -90,9 +89,47 @@
     </header>
     <!-- header end -->
 
+
     <!-- cart start -->
 
+    <div class="container mt-5 mb-5">
+        <div class="d-flex justify-content-center row">
+            <div class="col-md-8">
+                <div class="p-2">
+                    <h4>Shopping cart</h4>
+                </div>
+                <% result[0].forEach(function(item) { %>
+                    <div
+                        class="d-flex flex-row justify-content-between align-items-center p-2 bg-white mt-4 px-3 rounded">
+                        <div class="mr-1"><img class="rounded" src="<%= item.image %>" width="70">
+                        </div>
+                        <div class="d-flex flex-column align-items-center product-details"><span
+                                class="font-weight-bold">
+                                <%= item.name %>
+                            </span>
+                            <div class="d-flex flex-row product-desc">
+                                <div class="size mr-1"><span class="text-grey">Quantity:</span><span
+                                        class="font-weight-bold">
+                                        <%= item.quantity %>
+                                    </span></div>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center"><i class="fa fa-trash mb-1 text-danger"></i>
+                        </div>
+                    </div>
+                    <% }) %>
+
+                        <div class="d-flex flex-row align-items-center mt-3 p-2 bg-white rounded"><button
+                                class="btn btn-warning btn-block btn-lg ml-2 pay-button" type="button">Proceed
+                                to Pay</button></div>
+            </div>
+        </div>
+    </div>
     <!-- cart end -->
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
