finished add-to-favourite functionality

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -71,7 +71,7 @@
                                         <li class="active"> <a href="/index">Home</a> </li>
                                         <li> <a href="/cart">Cart</a> </li>
                                         <li><a href="/createListing">Create Listing</a></li>
-                                        <li><a href="contact.html">Link 4</a></li>
+                                        <li><a href="/favourite">Favourites</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
