--- a/views/pages/favourite.ejs
+++ b/views/pages/favourite.ejs
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,10 +43,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
-<!-- body -->
 
-<body class="main-layout ">
-
+<body>
+    <!-- header start -->
     <header>
         <!-- header inner -->
         <div class="header">
@@ -80,99 +87,65 @@
         </div>
         <!-- end header inner -->
     </header>
+    <!-- header end -->
 
 
-    <!-- contact -->
-    <div class="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2>Create Listing</h2>
-                    </div>
-                    <form class="main_form" action="/createListing" method="post">
-                        <div class="row">
-                            <div class=" col-md-12">
-                                <input class="form-control" placeholder="Product Name" type="text" name="product_name">
-                            </div>
-                            <div class=" col-md-12">
-                                <input class="form-control" placeholder="Product Category" type="text"
-                                    name="product_category">
-                            </div>
-                            <div class=" col-md-12">
-                                <input class="form-control" placeholder="Product image" type="text"
-                                    name="product_image">
-                            </div>
-                            <div class=" col-md-12">
-                                <button class="send">Create Listing</button>
+
+    <div class="container mt-5 mb-5">
+        <div class="d-flex justify-content-center row">
+            <div class="col-md-8">
+                <div class="p-2">
+                    <h4>Favourites:</h4>
+                </div>
+                <% result[0].forEach(function(item) { %>
+                    <div
+                        class="d-flex flex-row justify-content-between align-items-center p-2 bg-white mt-4 px-3 rounded">
+                        <div class="mr-1"><img class="rounded" src="image" width="70">
+                        </div>
+                        <div class="d-flex flex-column align-items-center product-details"><span
+                                class="font-weight-bold">
+                                <%= item.name %>
+                            </span>
+                            <div class="d-flex flex-row product-desc">
+                                <div class="size mr-1"><span class="text-grey">Quantity:</span><span
+                                        class="font-weight-bold">
+                                        <%= item.quantity %>
+                                    </span></div>
                             </div>
                         </div>
-                    </form>
-                </div>
+                        <div class="d-flex align-items-center">
+                            <form action="/add_to_cart" method="post">
+                                <input type="hidden" name="product_id" value="<%= item.product_id %>">
+                                <input type="hidden" name="quantity" value="<%= item.quantity %>">
+                                <input type="submit" value="Add to cart" class="btn btn-primary">
+                            </form>
+                        </div>
+                    </div>
+
+
+                    <% }) %>
+
+                        <!-- <div class="d-flex flex-row align-items-center mt-3 p-2 bg-white rounded"><button
+                        class="btn btn-warning btn-block btn-lg ml-2 pay-button" type="button">Proceed
+                        to Pay</button></div> -->
             </div>
         </div>
     </div>
-    <!-- end contact -->
 
-    <!-- footer -->
-    <footer>
-        <div id="contact" class="footer">
-            <div class="container">
-                <div class="row pdn-top-30">
-                    <div class="col-md-12 ">
-                        <div class="footer-box">
-                            <div class="headinga">
-                                <h3>Address</h3>
-                                <span>San Jose State University</span>
-                                <p>1111111111
-                                    <br>team11@gmail.com
-                                </p>
-                            </div>
 
-                            <div class="menu-bottom">
-                                <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- end footer -->
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- javascript -->
-    <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".fancybox").fancybox({
-                openEffect: "none",
-                closeEffect: "none"
-            });
 
-            $(".zoom").hover(function () {
 
-                $(this).addClass('transition');
-            }, function () {
 
-                $(this).removeClass('transition');
-            });
-        });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
