--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -29,41 +29,47 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+        media="screen">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 
-      <style>
+    <style>
         .login-form {
             width: 340px;
             margin: 50px auto;
-              font-size: 15px;
+            font-size: 15px;
         }
+
         .login-form form {
             margin-bottom: 15px;
             background: #f7f7f7;
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             padding: 30px;
         }
+
         .login-form h2 {
             margin: 0 0 15px;
         }
-        .form-control, .btn {
+
+        .form-control,
+        .btn {
             min-height: 38px;
             border-radius: 2px;
         }
-        .btn {        
+
+        .btn {
             font-size: 15px;
             font-weight: bold;
         }
-        </style>
+    </style>
 
 </head>
 <!-- body -->
 
 <body class="main-layout ">
-    
+
     <header>
         <!-- header inner -->
         <div class="header">
@@ -74,7 +80,9 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="/index"><h2>DONATIONS APP<h2></a>
+                                    <a href="/index">
+                                        <h2>DONATIONS APP<h2>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -87,7 +95,7 @@
                                         <li class="active"> <a href="/index">Home</a> </li>
                                         <li> <a href="/cart">Cart</a> </li>
                                         <li><a href="/createListing">Create Listing</a></li>
-                                        <li><a href="contact.html">Link 4</a></li>
+                                        <li><a href="/favourite">Favourites</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -103,11 +111,11 @@
         </div>
         <!-- end header inner -->
     </header>
-    
+
     <!-- Login form -->
     <div class="login-form">
         <form action="/" method="post">
-            <h2 class="text-center">Log in</h2>       
+            <h2 class="text-center">Log in</h2>
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="Username" required="required" name="username">
             </div>
@@ -116,7 +124,7 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block" value="LOGIN">Log in</button>
-            </div>      
+            </div>
         </form>
         <p class="text-center"><a href="/signUp">Create an Account</a></p>
     </div>
@@ -136,15 +144,16 @@
                                 <h3>Address</h3>
                                 <span>San Jose State University</span>
                                 <p>1111111111
-                                    <br>team11@gmail.com</p>
+                                    <br>team11@gmail.com
+                                </p>
                             </div>
-                            
+
                             <div class="menu-bottom">
                                 <ul class="link">
                                     <li> <a href="#">Home</a></li>
                                     <li> <a href="#">About</a></li>
                                     <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
+                                    <li> <a href="#">Specials </a></li>
                                     <li> <a href="#"> Contact us</a></li>
                                 </ul>
                             </div>
@@ -168,16 +177,16 @@
     <script src="js/owl.carousel.js"></script>
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $(".fancybox").fancybox({
                 openEffect: "none",
                 closeEffect: "none"
             });
 
-            $(".zoom").hover(function() {
+            $(".zoom").hover(function () {
 
                 $(this).addClass('transition');
-            }, function() {
+            }, function () {
 
                 $(this).removeClass('transition');
             });
