finished remove from cart functionality

--- a/views/pages/createListing.ejs
+++ b/views/pages/createListing.ejs
@@ -100,6 +100,10 @@
                                     name="product_category">
                             </div>
                             <div class=" col-md-12">
+                                <input class="form-control" placeholder="Product Quantity" type="number"
+                                    name="product_quantity">
+                            </div>
+                            <div class=" col-md-12">
                                 <input class="form-control" placeholder="Product image" type="text"
                                     name="product_image">
                             </div>
