--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -114,7 +114,11 @@
                                     </span></div>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center"><i class="fa fa-trash mb-1 text-danger"></i>
+                        <div class="d-flex align-items-center">
+                            <form action="/remove_from_cart" method="post">
+                                <input type="hidden" name="product_id" value="<%= item.product_id %>">
+                                <input type="submit" value="Remove from cart" class="btn btn-primary">
+                            </form>
                         </div>
                     </div>
                     <% }) %>
