Fixed createListing and contactUs functionality

--- a/views/pages/createListing.ejs
+++ b/views/pages/createListing.ejs
@@ -96,8 +96,8 @@
                                 <input class="form-control" placeholder="Product Name" type="text" name="product_name">
                             </div>
                             <div class=" col-md-12">
-                                <input class="form-control" placeholder="Product Category" type="text"
-                                    name="product_category">
+                                <input class="form-control" placeholder="Product Category" type="number"
+                                    name="product_category_id">
                             </div>
                             <div class=" col-md-12">
                                 <input class="form-control" placeholder="Product Quantity" type="number"
