--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -163,19 +163,13 @@
                     <div class="titlepage">
                         <h2>Contact us</h2>
                     </div>
-                    <form class="main_form">
+                    <form class="main_form" action="/contact_us" method="post">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                                <input class="form-control" placeholder="Your name" type="text" name="Your Name">
-                            </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                                <input class="form-control" placeholder="Email" type="text" name="Email">
+                            <div class=" col-md-12">
+                                <input class="form-control" placeholder="Phone" type="text" name="phone_number">
                             </div>
                             <div class=" col-md-12">
-                                <input class="form-control" placeholder="Phone" type="text" name="Phone">
-                            </div>
-                            <div class="col-md-12">
-                                <textarea class="textarea" placeholder="Message"></textarea>
+                                <input class="form-control" placeholder="Message" type="text" name="message">
                             </div>
                             <div class=" col-md-12">
                                 <button class="send">Send</button>
