removed auth for easy testing, updated .sql file

--- a/views/pages/favourite.ejs
+++ b/views/pages/favourite.ejs
@@ -120,6 +120,12 @@
                                 <input type="submit" value="Add to cart" class="btn btn-primary">
                             </form>
                         </div>
+                        <!-- <div class="d-flex align-items-center">
+                            <form action="/remove_from_cart" method="post">
+                                <input type="hidden" name="favourite_product_id" value="<%= item.product_id %>">
+                                <input type="submit" value="Remove from favourite" class="btn btn-primary">
+                            </form>
+                        </div> -->
                     </div>
 
 
